fix .70
